RESOLVED FIXED306379
[macOS Debug]: ASSERTION FAILED: m_wrapper /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Source/WebCore/bindings/js/JSEventListener.h(168) : JSC::JSObject *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext &) const
https://bugs.webkit.org/show_bug.cgi?id=306379
Summary [macOS Debug]: ASSERTION FAILED: m_wrapper /Volumes/Data/worker/macOS-Tahoe-D...
Marta Darbinyan
Reported 2026-01-27 15:55:35 PST
The following test is a flaky crash on EWS bots. webrtc/addTransceiver-then-addTrack.html The first crash occurred on https://ews-build.webkit.org/#/builders/161/builds/10071. On post-commit bots the crash is not detected. ASSERTION FAILED: m_wrapper /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Source/WebCore/bindings/js/JSEventListener.h(168) : JSC::JSObject *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext &) const 1 0x304a07e50 WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const 2 0x304a07308 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 3 0x3059c44f4 WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::Ref<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener>>, 1ul, WTF::CrashOnOverflow, 2ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 4 0x3059b7000 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 5 0x3059c3ef4 WebCore::EventTarget::dispatchEvent(WebCore::Event&) 6 0x3040700e4 WebCore::RTCPeerConnection::dispatchEvent(WebCore::Event&) 7 0x3040964b0 _ZZN7WebCore17RTCPeerConnection13scheduleEventEON3WTF3RefINS_5EventENS1_12RawPtrTraitsIS3_EENS1_21DefaultRefDerefTraitsIS3_EEEEEN3$_0clIS0_EEDaRT_ 8 0x304096474 void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::RTCPeerConnection, WebCore::RTCPeerConnection::scheduleEvent(WTF::Ref<WebCore::Event, WTF::RawPtrTraits<WebCore::Event>, WTF::DefaultRefDerefTraits<WebCore::Event>>&&)::$_0>(WebCore::RTCPeerConnection&, WebCore::TaskSource, WebCore::RTCPeerConnection::scheduleEvent(WTF::Ref<WebCore::Event, WTF::RawPtrTraits<WebCore::Event>, WTF::DefaultRefDerefTraits<WebCore::Event>>&&)::$_0&&)::'lambda'()::operator()() 9 0x304096398 WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::RTCPeerConnection, WebCore::RTCPeerConnection::scheduleEvent(WTF::Ref<WebCore::Event, WTF::RawPtrTraits<WebCore::Event>, WTF::DefaultRefDerefTraits<WebCore::Event>>&&)::$_0>(WebCore::RTCPeerConnection&, WebCore::TaskSource, WebCore::RTCPeerConnection::scheduleEvent(WTF::Ref<WebCore::Event, WTF::RawPtrTraits<WebCore::Event>, WTF::DefaultRefDerefTraits<WebCore::Event>>&&)::$_0&&)::'lambda'(), void>::call() 10 0x30003732c WTF::Function<void ()>::operator()() const 11 0x3059ca79c WebCore::EventLoopFunctionDispatchTask::execute() 12 0x3059bc74c WebCore::EventLoop::run(std::__1::optional<WTF::ApproximateTime>) 13 0x305bc7b98 WebCore::WindowEventLoop::didReachTimeToRun() 14 0x305bd1cf8 WebCore::Timer::Timer<WebCore::WindowEventLoop, WebCore::WindowEventLoop>(WebCore::WindowEventLoop&, void (WebCore::WindowEventLoop::*)())::'lambda'()::operator()() const 15 0x305bd1b50 WTF::Detail::CallableWrapper<WebCore::Timer::Timer<WebCore::WindowEventLoop, WebCore::WindowEventLoop>(WebCore::WindowEventLoop&, void (WebCore::WindowEventLoop::*)())::'lambda'(), void>::call() 16 0x30003732c WTF::Function<void ()>::operator()() const 17 0x300188700 WebCore::Timer::fired() 18 0x306f95928 WebCore::ThreadTimers::sharedTimerFiredInternal() 19 0x306fa09e4 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 20 0x306fa0990 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 21 0x30003732c WTF::Function<void ()>::operator()() const 22 0x306f2b2a4 WebCore::MainThreadSharedTimer::fired() 23 0x3070ac020 WebCore::timerFired(__CFRunLoopTimer*, void*) 24 0x192ba718c __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 25 0x192ba6e4c __CFRunLoopDoTimer 26 0x192ba69c4 __CFRunLoopDoTimers 27 0x192b9776c __CFRunLoopRun 28 0x192c51e34 _CFRunLoopRunSpecificWithOptions 29 0x194de6964 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 30 0x1943e5a50 -[NSRunLoop(NSRunLoop) run] 31 0x1927e4e14 _xpc_objc_main com.apple.WebKit.WebContent.Development terminated (pid 22773) for reason: crash Test result: https://ews-build.webkit.org/#/builders/161/builds/11253 History: https://results.webkit.org/?suite=layout-tests&test=webrtc%2FaddTransceiver-then-addTrack.html
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-27 15:56:22 PST
EWS
Comment 2 2026-01-28 11:29:36 PST
Test gardening commit 306365@main (0c0e41008233): <https://commits.webkit.org/306365@main> Reviewed commits have been landed. Closing PR #57425 and removing active labels.
EWS
Comment 3 2026-02-03 15:59:01 PST
Test gardening commit 306739@main (73b086fa2e21): <https://commits.webkit.org/306739@main> Reviewed commits have been landed. Closing PR #57818 and removing active labels.
youenn fablet
Comment 4 2026-02-18 08:39:48 PST
EWS
Comment 5 2026-02-18 11:57:05 PST
Committed 307777@main (5a279c49d7d3): <https://commits.webkit.org/307777@main> Reviewed commits have been landed. Closing PR #58930 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.