Cherry-pick 307777@main (5a279c49d7d3). https://bugs.webkit.org/show_bug.cgi?id=306379

[macOS Debug]: ASSERTION FAILED: m_wrapper /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Source/WebCore/bindings/js/JSEventListener.h(168) : JSC::JSObject *WebCore::JSEventListener::ensureJSFunction(ScriptExecutionContext &) const
    rdar://169044514
    https://bugs.webkit.org/show_bug.cgi?id=306379

    Reviewed by Eric Carlson.

    As per https://w3c.github.io/webrtc-pc/#garbage-collection, a connection can be GCed when its closed slot is true,
    as no event should be fired on a closed connection.
    We update RTCPeerConnection::scheduleEvent lambda to exit early if the connection is closed.

    Canonical link: https://commits.webkit.org/307777@main

Canonical link: https://commits.webkit.org/298234.430@webkitglib/2.50